--- a/02-iostream-intro/CMakeLists.txt
+++ b/02-iostream-intro/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.8)
 project(02-iostream-intro)
-set(CMAKE_CXX_STANDARD 14) # Try 11 if your compiler does not support C++14
-add_executable(app main.cpp)
+set(CMAKE_CXX_STANDARD 20) # Try 11 if your compiler does not support C++20
+add_executable(02-iostream-intro main.cpp)
