--- a/05-functions-intro/CMakeLists.txt
+++ b/05-functions-intro/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.8)
-project(04-chapter01-quiz)
+project(05-functions-intro)
 set(CMAKE_CXX_STANDARD 20) # Try 11 if your compiler does not support C++20
-add_executable(04-chapter01-quiz main.cpp)
+add_executable(05-functions-intro main.cpp)
