--- a/07-input-line/CMakeLists.txt
+++ b/07-input-line/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.8)
-project(06-conversions)
+project(07-input-line)
 set(CMAKE_CXX_STANDARD 20) # Try 11 if your compiler does not support C++20
-add_executable(06-conversions main.cpp)
+add_executable(07-input-line main.cpp)
